Update link and sidebar title

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -21,8 +21,8 @@ Here are the few things you would need for this integration—
     <a href="https://beeceptor.com/" target="_blank">
         Beeceptor
     </a>
-    . This will help you understand the notification flow before you start to
-    implement it on your server.
+    . This will help you understand the notification flow before you start to implement
+    it on your server.
 </Callout>
 
 <hr class="primary" />
@@ -45,9 +45,9 @@ E.g:
 </CodeBlockWithCopy>
 
 <Callout type="warning">
-  You can expect this `additionalData` as part of a JSON body when we notify you
-  with bank account verification details over webhook, or when you use our{" "}
-  <code>GET</code> details API.
+    You can expect this `additionalData` as part of a JSON body when we notify
+    you with bank account verification details over webhook, or when you use our{" "}
+    <code>GET</code> details API.
 </Callout>
 <br />
 
@@ -270,10 +270,8 @@ This API lets you test the end to end flow without an actual payment. This will 
                     content: (
                         <>
                             <p>
-                                <Badge type="failure">
-                                    BAD REQUEST
-                                </Badge>{"Invalid request payload"}
-                                
+                                <Badge type="failure">BAD REQUEST</Badge>
+                                {"Invalid request payload"}
                             </p>
                             <hr className="tertiary" />
                             <h5>Request</h5>
@@ -345,10 +343,9 @@ Below are the summary of the notifications which need to be processed on your se
     event. Response body is ignored.
 </Callout>
 
-<br/>
+<br />
 
-Setu provides webhook authentication. For more details, refer to <a href="data/bav/reverse-penny-drop/webhook-authentication" target="_blank">webhook-authentication</a>
-
+Setu provides webhook authentication. For more details, refer to <a href="/data/bav/reverse-penny-drop/webhook-authentication" target="_blank">webhook-authentication</a>
 
 <hr className="tertiary" />
 
@@ -370,14 +367,12 @@ _`accountType` can be `BANK_ACCOUNT`, `PPI` or `UNKNOWN`_
     <code>UNKNOWN</code>, please notify us at [support@setu.co](support@setu.co)
 </Callout>
 
-<br/>
-
+<br />
 
 _`bankAccountType` is an optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
 _The value can be `SAVINGS`, `CURRENT`, `NRO`, `NRE`_
 
-
-###### Examples 
+###### Examples
 
 <Text size="small" weight="600">
     Example 1
@@ -473,92 +468,92 @@ _The value can be `SAVINGS`, `CURRENT`, `NRO`, `NRE`_
 </Card>
 
 ##### 2. RPD_DEBIT_ATTEMPT_FAILED Webhook
+
 This webhook is sent when the end user tries to make a payments but the debit fails due to some reason.
 
-
 <Card padding="nano" shape="rounded">
-  <details>
-    <summary>
-       statusCode of this event can be one of the following:
-    </summary>
+    <details>
+        <summary>statusCode of this event can be one of the following:</summary>
         <table>
-        <tr>
-            <th>statusCode</th>
-            <th>statusDescription</th>
-        </tr>
-        <tr>
-            <td>R01</td>
-            <td>The customer's debit attempt failed.</td>
-        </tr>
-        <tr>
-            <td>R02</td>
-            <td>Payment authorization took too long.</td>
-        </tr>
-        <tr>
-            <td>R03</td>
-            <td>The customer's bank is taking too long to respond.</td>
-        </tr>
-        <tr>
-            <td>R04</td>
-            <td>The debit process took too long.</td>
-        </tr>
-        <tr>
-            <td>R05</td>
-            <td>Connection timed out during the credit request process.</td>
-        </tr>
-        <tr>
-            <td>R06</td>
-            <td>The transaction exceeds the risk threshold.</td>
-        </tr>
-        <tr>
-            <td>R07</td>
-            <td>The customer's bank is unavailable.</td>
-        </tr>
-        <tr>
-            <td>R08</td>
-            <td>This transaction isn't permitted for the beneficiary.</td>
-        </tr>
-        <tr>
-            <td>R09</td>
-            <td>Connection timed out during the debit request process.</td>
-        </tr>
-        <tr>
-            <td>R12</td>
-            <td>Beneficiary bank response time is too high.</td>
-        </tr>
-        <tr>
-            <td>R13</td>
-            <td>The total debit amount exceeded the set limit.</td>
-        </tr>
-        <tr>
-            <td>R14</td>
-            <td>Transaction details mismatch.</td>
-        </tr>
-        <tr>
-            <td>R16</td>
-            <td>The requested function is not supported for the beneficiary.</td>
-        </tr>
-        <tr>
-            <td>R20</td>
-            <td>Receiver/beneficiary is not available, causing a timeout.</td>
-        </tr>
-        <tr>
-            <td>R22</td>
-            <td>The debit acknowledgement was not received.</td>
-        </tr>
-        <tr>
-            <td>R25</td>
-            <td>Duplicate transaction request.</td>
-        </tr>
-        <tr>
-            <td>R100</td>
-            <td>Any other upstream server error.</td>
-        </tr>
+            <tr>
+                <th>statusCode</th>
+                <th>statusDescription</th>
+            </tr>
+            <tr>
+                <td>R01</td>
+                <td>The customer's debit attempt failed.</td>
+            </tr>
+            <tr>
+                <td>R02</td>
+                <td>Payment authorization took too long.</td>
+            </tr>
+            <tr>
+                <td>R03</td>
+                <td>The customer's bank is taking too long to respond.</td>
+            </tr>
+            <tr>
+                <td>R04</td>
+                <td>The debit process took too long.</td>
+            </tr>
+            <tr>
+                <td>R05</td>
+                <td>Connection timed out during the credit request process.</td>
+            </tr>
+            <tr>
+                <td>R06</td>
+                <td>The transaction exceeds the risk threshold.</td>
+            </tr>
+            <tr>
+                <td>R07</td>
+                <td>The customer's bank is unavailable.</td>
+            </tr>
+            <tr>
+                <td>R08</td>
+                <td>This transaction isn't permitted for the beneficiary.</td>
+            </tr>
+            <tr>
+                <td>R09</td>
+                <td>Connection timed out during the debit request process.</td>
+            </tr>
+            <tr>
+                <td>R12</td>
+                <td>Beneficiary bank response time is too high.</td>
+            </tr>
+            <tr>
+                <td>R13</td>
+                <td>The total debit amount exceeded the set limit.</td>
+            </tr>
+            <tr>
+                <td>R14</td>
+                <td>Transaction details mismatch.</td>
+            </tr>
+            <tr>
+                <td>R16</td>
+                <td>
+                    The requested function is not supported for the beneficiary.
+                </td>
+            </tr>
+            <tr>
+                <td>R20</td>
+                <td>
+                    Receiver/beneficiary is not available, causing a timeout.
+                </td>
+            </tr>
+            <tr>
+                <td>R22</td>
+                <td>The debit acknowledgement was not received.</td>
+            </tr>
+            <tr>
+                <td>R25</td>
+                <td>Duplicate transaction request.</td>
+            </tr>
+            <tr>
+                <td>R100</td>
+                <td>Any other upstream server error.</td>
+            </tr>
         </table>
-  </details>
+    </details>
 </Card>
-
-
 
 ###### Examples
 
@@ -567,12 +562,11 @@ This webhook is sent when the end user tries to make a payments but the debit fa
 </Text>
 
 <Card padding="nano" shape="rounded" marginBottom="micro">
-  <details>
-    <summary>
-        In case of customer's debit attempt failed
-    </summary>
-    <hr className="tertiary" />
-    <CodeBlockWithCopy language="json">{`
+    <details>
+        <summary>In case of customer's debit attempt failed</summary>
+        <hr className="tertiary" />
+        <CodeBlockWithCopy language="json">
+            {`
 {
   "data": {
     "rpd": {
@@ -586,8 +580,8 @@ This webhook is sent when the end user tries to make a payments but the debit fa
   "timeStamp": "2023-08-24T12:59:11.427233"
 }
   `}
-</CodeBlockWithCopy>
-  </details>
+        </CodeBlockWithCopy>
+    </details>
 </Card>
 
 <hr class="tertiary" />
@@ -604,7 +598,9 @@ This is an optional API. This API lets you know the bank verification status.
 </Callout>
 <br />
 <Callout type="warning">
-  Note: Data will be purged after receiving a 2xx status code from the webhook. In the case of a non-2xx status code, the data will be purged after 24 hours.
+    Note: Data will be purged after receiving a 2xx status code from the
+    webhook. In the case of a non-2xx status code, the data will be purged after
+    24 hours.
 </Callout>
 
 <Row>
