--- a/content/data/bav/reverse-penny-drop/webhook-authentication.mdx
+++ b/content/data/bav/reverse-penny-drop/webhook-authentication.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Webhook Authentication
+sidebar_title: Webhook Auth
 page_title: Webhook Authentication
 order: 3
 visible_in_sidebar: true
@@ -11,7 +11,7 @@ Setu provides the following methods of authentication for webhook notifications 
 
 ## Basic Authentication
 
-`Authorization` header contains a base64-encoded string of the format `username:password`. `username` & `password` are provided by partner 
+`Authorization` header contains a base64-encoded string of the format `username:password`. `username` & `password` are provided by partner
 
 <CodeBlockWithCopy>
     Authorization: Basic base64(username:password)
@@ -21,14 +21,13 @@ Setu provides the following methods of authentication for webhook notifications 
 
 `Authorization` header contains a `HMAC-SHA256` signature of secret value provided by partner.
 
-<CodeBlockWithCopy>
-Authorization: HMAC-SHA256(secret)
-</CodeBlockWithCopy>
+<CodeBlockWithCopy>Authorization: HMAC-SHA256(secret)</CodeBlockWithCopy>
 
 ## API Key
 
 `Authorization` header contains a `X-API-KEY` & `X-CLIENT-ID` with values provided by partner.
 
-<CodeBlockWithCopy>{`X-API-KEY: x_api_key_value
+<CodeBlockWithCopy>
+    {`X-API-KEY: x_api_key_value
 X-CLIENT-ID: x_client_id_value`}
 </CodeBlockWithCopy>
